--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,22 +25,25 @@ body {
     text-align: center; /* Center content within each box */
 }
 
+.left-box h2 {
+    height: 10em;
+    width: 10em;
+    margin: auto;
+}
+
 textarea {
     width: 100%;
 }
 
 section {
-    color: black;
     border: 20px solid rgb(83, 83, 85);
     border-radius: 10px;
     padding: 20px;
-max-width: 1050px;
-max-height: 400px;
-margin: 10px auto;
-   overflow: auto;
+    max-width: 1050px;
+    max-height: 400px;
+    margin: 10px auto;
+    overflow: auto;
 }
-
-
 
 #submitButton {
     width: 100%;  /* Set the button width */
@@ -52,12 +55,11 @@ margin: 10px auto;
     border: none;  /* Remove default border */
     border-radius: 5px;  /* Add rounded corners */
     cursor: pointer;  /* Indicate clickable behavior */
-  }
+}
 
-  @media only screen and (max-width: 600px) {
-    .container {
-        display: flex;
-        flex-direction: column;
-    }
-    
-  }
+@media only screen and (max-width: 600px) {
+   .container {
+       display: flex;
+       flex-direction: column;
+   }
+}
