Add styled 'Go Back' button on error page.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,32 @@ select {
     cursor: pointer;  /* Indicate clickable behavior */
 }
 
+.back {
+    width: 50%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.back button {
+    width: 40%;  /* Set the button width */
+    height: 50px;  /* Set the button height */
+    font-size: 16px;  /* Adjust text size within the button */
+    padding: 10px 0px;  /* Add padding for spacing around the text */
+    background-color: #3f443f;  /* Set a background color */
+    color: white;  /* Set text color */
+    border: none;  /* Remove default border */
+    border-radius: 5px;  /* Add rounded corners */
+    cursor: pointer;  /* Indicate clickable behavior */
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
 @media only screen and (max-width: 600px) {
     body {
         font-size: 14px;
