--- a/templates/errorPrinter.html
+++ b/templates/errorPrinter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SubmitAsciiArt</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <h1 align = "center">ASCI-ART WEB</h1><br><br>
@@ -15,7 +15,7 @@
     <h2 align="center"><pre>{{ .Issue }}</pre></h2>
   </section>
   <div class="back">
-  <button type="button"><a href="/">Go Back</a></button>
+  <a href="/">Go Back</a>
   </div>
 </body>
 </html>
