--- a/templates/placeHolder.html
+++ b/templates/placeHolder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SubmitAsciiArt</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <h1 align = "center">ASCI-ART WEB</h1><br><br>
